--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "extension": "^0.2.2",
     "html-to-draftjs": "^1.5.0",
     "react": "^17.0.2",
+    "react-confirm-box": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-file-base64": "^1.0.3",
+    "react-image-upload": "^2.0.1",
+    "react-images-upload": "^1.2.8",
+    "react-images-uploading": "^3.1.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -31,8 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch src/db.json --port 5100"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
