--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "client": "0.0.1",
     "devtools": "^7.16.13",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
